tratamiento y produccion carne
Cambio en color de los botones en todos los layouts
Caso de uso de produccion de carne

Falta eliminar bovino del inventario

--- a/BienestarBovino/app/src/main/res/layout/addbovino.xml
+++ b/BienestarBovino/app/src/main/res/layout/addbovino.xml
@@ -234,7 +234,7 @@
         android:id="@+id/buttonBackNewBovino"
         android:layout_width="412dp"
         android:layout_height="59dp"
-        android:background="#092E02"
+        android:background="#656642"
         android:text="Regresar"
         android:textAlignment="center"
         android:textAllCaps="false"
@@ -250,7 +250,7 @@
         android:layout_width="414dp"
         android:layout_height="54dp"
         android:layout_marginTop="608dp"
-        android:background="#0A3E00"
+        android:background="#656642"
         android:text="Agregar Bovino"
         android:textAlignment="center"
         android:textAllCaps="false"
