--- a/BienestarBovino/app/src/main/res/layout/produccion_peso.xml
+++ b/BienestarBovino/app/src/main/res/layout/produccion_peso.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TreatmentActivity">
+    tools:context=".WeightProductionActivity">
 
     <ImageView
-        android:id="@+id/imageView16"
+        android:id="@+id/imageView20"
         android:layout_width="72dp"
         android:layout_height="64dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -18,32 +18,26 @@
         app:layout_constraintVertical_bias="0.007"
         app:srcCompat="@drawable/_2459_1" />
 
-    <EditText
-        android:id="@+id/entryFechaTratamiento"
-        android:layout_width="304dp"
-        android:layout_height="50dp"
-        android:background="@drawable/rectangle_drawable"
-        android:ems="10"
-        android:hint="Fecha de tratamiento"
-        android:inputType="date"
-        android:minHeight="48dp"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textColorHint="@android:color/white"
-        android:textSize="20sp"
+    <TextView
+        android:id="@+id/textView36"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Registrar Peso"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.399" />
+        app:layout_constraintVertical_bias="0.067" />
 
     <Button
-        android:id="@+id/buttonGuardarTratamiento"
+        android:id="@+id/buttonPesoRegister"
         android:layout_width="414dp"
         android:layout_height="54dp"
         android:background="#656642"
-        android:text="Guardar"
+        android:text="Registrar"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
@@ -56,7 +50,7 @@
         app:layout_constraintVertical_bias="0.914" />
 
     <Button
-        android:id="@+id/btnRegresarTratamiento"
+        android:id="@+id/buttonPesoRegresar"
         android:layout_width="417dp"
         android:layout_height="49dp"
         android:background="#656642"
@@ -67,76 +61,59 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
     <Spinner
-        android:id="@+id/spinnerBovinoVacunacion"
-        android:layout_width="308dp"
-        android:layout_height="53dp"
+        android:id="@+id/spinnerBovinoPeso"
+        android:layout_width="324dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="156dp"
         android:contentDescription="@string/app_name"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:outlineAmbientShadowColor="#FFFFFF"
+        android:outlineSpotShadowColor="#FFFFFF"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonPesoRegresar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.215" />
+        app:layout_constraintVertical_bias="0.207" />
 
     <TextView
-        android:id="@+id/textView16"
+        android:id="@+id/textViewNewUser6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nombre de la vaca"
+        android:text="Dieta:"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.172"
+        app:layout_constraintHorizontal_bias="0.094"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.158" />
+        app:layout_constraintVertical_bias="0.626" />
 
-    <EditText
-        android:id="@+id/entryDiagnosticoTratamiento"
-        android:layout_width="304dp"
-        android:layout_height="50dp"
-        android:background="@drawable/rectangle_drawable"
-        android:ems="10"
-        android:hint="Diagnostico"
-        android:inputType="textPersonName"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textColorHint="@android:color/white"
+    <TextView
+        android:id="@+id/textViewPesajeFecha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fecha de pesaje:"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintHorizontal_bias="0.124"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.515" />
+        app:layout_constraintVertical_bias="0.33" />
 
     <EditText
-        android:id="@+id/entryDiasTratamiento"
-        android:layout_width="304dp"
-        android:layout_height="50dp"
-        android:background="@drawable/rectangle_drawable"
-        android:ems="10"
-        android:hint="Días de tratamiento"
-        android:inputType="number"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textColorHint="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.467"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.631" />
-
-    <EditText
-        android:id="@+id/editNotasTratamiento"
-        android:layout_width="304dp"
-        android:layout_height="50dp"
+        android:id="@+id/editTextNotasPeso"
+        android:layout_width="318dp"
+        android:layout_height="49dp"
         android:background="@drawable/rectangle_drawable"
         android:ems="10"
         android:hint="Notas"
@@ -146,23 +123,74 @@
         android:textColorHint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.738" />
+        app:layout_constraintVertical_bias="0.758" />
 
     <TextView
-        android:id="@+id/textView8"
-        android:layout_width="100dp"
-        android:layout_height="37dp"
-        android:text="Tratamiento"
-        android:textSize="16sp"
+        android:id="@+id/textViewBovinoPeso"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Seleccione el bovino"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.125"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.07" />
+        app:layout_constraintVertical_bias="0.162" />
 
+    <EditText
+        android:id="@+id/editFechaPeso"
+        android:layout_width="325dp"
+        android:layout_height="54dp"
+        android:background="@drawable/rectangle_drawable"
+        android:ems="10"
+        android:hint="Ingrese la fecha"
+        android:inputType="date"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.395" />
+
+    <EditText
+        android:id="@+id/editPesoVaca"
+        android:layout_width="324dp"
+        android:layout_height="53dp"
+        android:background="@drawable/rectangle_drawable"
+        android:ems="10"
+        android:hint="Ingrese el peso en kilos"
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textColorHint="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.508" />
+
+    <Spinner
+        android:id="@+id/spinnerDieta"
+        android:layout_width="274dp"
+        android:layout_height="61dp"
+        android:layout_marginTop="420dp"
+        android:contentDescription="@string/app_name"
+        android:outlineAmbientShadowColor="#FFFFFF"
+        android:outlineSpotShadowColor="#FFFFFF"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonPesoRegresar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.678"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.048" />
 </androidx.constraintlayout.widget.ConstraintLayout>
