--- a/BienestarBovino/app/src/main/res/drawable/rectangle_drawable.xml
+++ b/BienestarBovino/app/src/main/res/drawable/rectangle_drawable.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#1E8708"/>
+    <solid android:color="#25BA06"/>
     <stroke
-        android:width="3dp"
-        android:color="#1E8708"/>
+        android:width="1dp"
+        android:color="#0B1E07"/>
     <padding
         android:bottom="5dp"
         android:left="5dp"
