--- a/BienestarBovino/app/src/main/res/layout/compra.xml
+++ b/BienestarBovino/app/src/main/res/layout/compra.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PurchaseActivity">
+    tools:context=".PurchaseActivity"
+    android:background="#E1E0E0">
 
     <ImageView
         android:id="@+id/imageView9"
