--- a/BienestarBovino/app/src/main/res/layout/control_reproductivo.xml
+++ b/BienestarBovino/app/src/main/res/layout/control_reproductivo.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ControlReproductivoActivity">
+    tools:context=".ControlReproductivoActivity"
+    android:background="#E1E0E0">
 
     <Button
         android:id="@+id/btnControlReproductivoRegresar"
