--- a/BienestarBovino/app/src/main/res/layout/finca.xml
+++ b/BienestarBovino/app/src/main/res/layout/finca.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FincaActivity">
+    tools:context=".FincaActivity"
+    android:background="#E1E0E0">
 
     <TextView
         android:id="@+id/textView2"
