--- a/BienestarBovino/app/src/main/res/values-night/themes.xml
+++ b/BienestarBovino/app/src/main/res/values-night/themes.xml
@@ -2,9 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.BienestarBovino" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
-        <item name="colorAccent">@color/teal_200</item>
+        <item name="colorPrimary">#176505</item>
+        <item name="colorPrimaryDark">#1A470A</item>
+        <item name="colorAccent">#B8DF96</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
