--- a/BienestarBovino/app/src/main/res/values/themes.xml
+++ b/BienestarBovino/app/src/main/res/values/themes.xml
@@ -1,10 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.BienestarBovino" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.MenuTest" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
-        <item name="colorAccent">@color/teal_200</item>
+        <item name="colorPrimary">#3A6311</item>
+        <item name="colorPrimaryVariant">#195009</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">#97E460</item>
+        <item name="colorSecondaryVariant">#B5EF74</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
