--- a/BienestarBovino/app/src/main/res/layout/menu_principal.xml
+++ b/BienestarBovino/app/src/main/res/layout/menu_principal.xml
@@ -42,7 +42,7 @@
             app:layout_constraintVertical_bias="0.602" />
 
         <Button
-            android:id="@+id/btnVacunaRegresar"
+            android:id="@+id/btnSincronizar"
             android:layout_width="417dp"
             android:layout_height="49dp"
             android:background="#146304"
